<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:key="smart_optimization_enable"
        android:summaryOff="@string/off"
        android:summaryOn="@string/on"
        android:switchTextOff="@string/off"
        android:switchTextOn="@string/on"
        android:title="@string/smart_enable" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="smart_optimization_enable"
        android:key="auto_clear_apps_screen_lock"
        android:summary="@string/auto_clear_apps_screen_lock_summany"
        android:title="@string/auto_clear_apps_screen_lock_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="smart_optimization_enable"
        android:key="auto_clear_apps"
        android:summary="@string/auto_clear_apps_summany"
        android:title="@string/auto_clear_apps_title" />

    <PreferenceScreen
        android:dependency="smart_optimization_enable"
        android:key="schedule_by_time"
        android:summary="@string/schedule_by_time_summany"
        android:title="@string/schedule_by_time_title" >
        <intent
            android:action="vn.cybersoft.obs.android.activities.ScheduleModeTimeActivity" />
    </PreferenceScreen>

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="smart_optimization_enable"
        android:key="schedule_by_battery_level"
        android:summary="@string/schedule_by_battery_level_summany"
        android:title="@string/schedule_by_battery_level_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="smart_optimization_enable"
        android:key="network_control"
        android:summary="@string/network_control_summany"
        android:title="@string/network_control_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="smart_optimization_enable"
        android:key="cpu_control"
        android:summary="@string/cpu_control_summany"
        android:title="@string/cpu_control_title" />

</PreferenceScreen>