<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 IUH €yber$oft Team

	 Licensed under the Apache License, Version 2.0 (the "License"); 
	 you may not use this file except in compliance with the License. 
	 You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

	 Unless required by applicable law or agreed to in writing, software 
	 distributed under the License is distributed on an "AS IS" BASIS, 
	 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
	 See the License for the specific language governing permissions and 
	 limitations under the License. 
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/add_new_schedule" >

    <CheckBoxPreference
        android:key="time_schedule_enabled"
        android:persistent="false"
        android:title="@string/enable_schedule" />

    <Preference
        android:key="time_schedule"
        android:persistent="false"
        android:title="@string/time" />

    <vn.cybersoft.obs.android.preference.RepeatPreference
        android:key="time_schedule_repeat"
        android:persistent="false"
        android:title="@string/time_schedule_repeat" />
    
    <vn.cybersoft.obs.android.preference.ModePreference
        android:key="time_schedule_mode"
        android:persistent="false"
        android:title="@string/schedule_mode" />

</PreferenceScreen>